
unreleased Version 0.3.43

  * dustmite: pattern passed to "find" must always use quotes
  * VS2015: new install adds $(VCInstallDir)\bin to exectuable paths to allow cv2pdb to create PDB files
  * VS2015: added detection for Universal CRT in Win10 SDK, new macro replacements $(UCRTSdkDir) and 
    $(UCRTVersion) allow adding library search path to find libucrt.lib
  * New item: the module name no longer has a preceding '.' when guessing a package name
  * when renaming a module in the project, the editor is reopened at the previous caret position if it was
    opened before
  * replaced ancient pkgcmd.ctc with pkgcmd.vsct that's buildable with newer VS SDKs
  * added icons to some commands
  * renamed command "Add Folder" in project folder context menu to "Add Filter"
  * added command "Add Package" to project folder context menu
  * renaming a module in the project tree now reopens it at the previous caret location
  * renaming a package in the project tree also renames the folder on disk if it is still empty
  * debug info: added option "suitable for selected debug engine"
  * the original semantic analysis engine is no longer installed, always using dparser now
  * LDC: recent versions build object files into intermediate folder, wrong names passed to linker
    with "separate compile and link"
  * moved defaults for resource includes and dmd executable paths from installation to extension init
  * fixed spurious "not implemented" error in error list
  * fix dark theme detection in VS 2015
  * better semantic/colorizer support for versions LDC,CRuntime_Microsoft,CRuntime_DigitalMars and MinGW
  * tweaked default path and library settings for DMD and LDC
  * configuration dialogs:
    - fixed small fonts in VS2015
    - better work with resizeable windows
    - scale some controls vertically if there is space
    - added browse buttons to path settings
  * search pane did not save its last state, only when switching between file and symbol search