@@ -33,14 +33,14 @@
   <useArrayBounds>0</useArrayBounds>
   <noboundscheck>0</noboundscheck>
   <useSwitchError>0</useSwitchError>
-  <useUnitTests>1</useUnitTests>
+  <useUnitTests>0</useUnitTests>
   <useInline>0</useInline>
   <release>0</release>
   <preservePaths>0</preservePaths>
   <warnings>0</warnings>
   <infowarnings>1</infowarnings>
   <checkProperty>0</checkProperty>
-  <genStackFrame>1</genStackFrame>
+  <genStackFrame>0</genStackFrame>
   <pic>0</pic>
   <cov>0</cov>
   <nofloat>0</nofloat>
@@ -515,11 +515,11 @@
    <File path="workaround.d" />
   </Folder>
   <Folder name="gc">
-   <File path="..\..\..\rainers\druntime\src\gc\gcdump.d" tool="None" />
-   <File path="..\..\..\rainers\druntime\src\gc\gcx.d" tool="None" />
-   <File path="..\..\..\rainers\druntime\src\rt\lifetime.d" tool="None" />
-   <File path="..\..\..\rainers\druntime\src\rt\sections_win32.d" tool="None" />
-   <File path="..\vdc\semantic.d" tool="None" />
+   <File tool="None" path="..\..\..\rainers\druntime\src\gc\gcdump.d" />
+   <File tool="None" path="..\..\..\rainers\druntime\src\gc\gcx.d" />
+   <File tool="None" path="..\..\..\rainers\druntime\src\rt\lifetime.d" />
+   <File tool="None" path="..\..\..\rainers\druntime\src\rt\sections_win32.d" />
+   <File tool="None" path="..\vdc\semantic.d" />
   </Folder>
   <Folder name="language">
    <File path="colorizer.d" />
@@ -552,7 +552,7 @@
    <File path="Resources\DSplashScreenIcon.bmp" />
    <File path="Resources\faninout.ico" />
    <File path="Resources\GroupByType.ico" />
-   <File path="Resources\pkgcmd.vsct" customcmd="set VSSDKInstall=%VSSDK140Install%
+   <File tool="Custom" path="Resources\pkgcmd.vsct" customcmd="set VSSDKInstall=%VSSDK140Install%
 if &quot;%VSSDKInstall%&quot; == &quot;&quot; set VSSDKInstall=%VSSDK120Install%
 if &quot;%VSSDKInstall%&quot; == &quot;&quot; set VSSDKInstall=%VSSDK110Install%
 if &quot;%VSSDKInstall%&quot; == &quot;&quot; set VSSDKInstall=%VSSDK100Install%
@@ -566,7 +566,7 @@ goto reportError
 :no_VSCT
 echo Warning: VSCT.exe not found as %VSCT%
 echo It is part of the VS2010-VS2013 SDK and is needed to compile $(InputPath)
-:reportError" tool="Custom" outfile="$(InputDir)\$(InputName).cto" />
+:reportError" outfile="$(InputDir)\$(InputName).cto" />
    <File path="Resources\refresh.ico" />
    <File path="Resources\RegExp.ico" />
    <File path="Resources\removetrace.ico" />
@@ -574,9 +574,9 @@ echo It is part of the VS2010-VS2013 SDK and is needed to compile $(InputPath)
    <File path="Resources\SearchFile.ico" />
    <File path="Resources\SearchSymbol.ico" />
    <File path="Resources\settrace.ico" />
-   <File path="visuald.rc" customcmd="call &quot;$(VSINSTALLDIR)\Common7\Tools\vsvars32.bat&quot;
+   <File tool="Custom" path="visuald.rc" dependencies="resources\pkgcmd.cto;resources\daboutlogo.ico;..\version;resources\dimagelist.bmp" customcmd="call &quot;$(VSINSTALLDIR)\Common7\Tools\vsvars32.bat&quot;
 rem if errorlevel 1 goto reportError
-rc /fo&quot;$(OutDir)\visuald.res&quot; $(InputPath)" tool="Custom" dependencies="resources\pkgcmd.cto;resources\daboutlogo.ico;..\version;resources\dimagelist.bmp" linkoutput="true" outfile="$(OutDir)\visuald.res" />
+rc /fo&quot;$(OutDir)\visuald.res&quot; $(InputPath)" outfile="$(OutDir)\visuald.res" linkoutput="true" />
    <File path="Resources\WholeWord.ico" />
   </Folder>
   <Folder name="Templates">
@@ -594,36 +594,36 @@ rc /fo&quot;$(OutDir)\visuald.res&quot; $(InputPath)" tool="Custom" dependencies
     <File path="Templates\CodeSnippets\SnippetsIndex.xml" />
    </Folder>
    <Folder name="Items">
-    <File path="Templates\Items\empty.d" tool="None" />
-    <File path="Templates\Items\hello.d" tool="None" />
+    <File tool="None" path="Templates\Items\empty.d" />
+    <File tool="None" path="Templates\Items\hello.d" />
     <File path="Templates\Items\items.vsdir" />
    </Folder>
    <Folder name="ProjectItems">
     <Folder name="ConsoleApp">
      <File path="Templates\ProjectItems\ConsoleApp\ConsoleApp.visualdproj" />
      <File path="Templates\ProjectItems\ConsoleApp\ConsoleApp.vstemplate" />
-     <File path="Templates\ProjectItems\ConsoleApp\main.d" tool="None" />
+     <File tool="None" path="Templates\ProjectItems\ConsoleApp\main.d" />
     </Folder>
     <Folder name="ConsoleDMDGDC">
      <File path="Templates\ProjectItems\ConsoleDMDGDC\ConsoleApp.visualdproj" />
      <File path="Templates\ProjectItems\ConsoleDMDGDC\ConsoleApp.vstemplate" />
-     <File path="Templates\ProjectItems\ConsoleDMDGDC\main.d" tool="None" />
+     <File tool="None" path="Templates\ProjectItems\ConsoleDMDGDC\main.d" />
     </Folder>
     <Folder name="DynamicLib">
-     <File path="Templates\ProjectItems\DynamicLib\dll.def" tool="None" />
-     <File path="Templates\ProjectItems\DynamicLib\dllmain.d" tool="None" />
+     <File tool="None" path="Templates\ProjectItems\DynamicLib\dll.def" />
+     <File tool="None" path="Templates\ProjectItems\DynamicLib\dllmain.d" />
      <File path="Templates\ProjectItems\DynamicLib\DynamicLib.visualdproj" />
      <File path="Templates\ProjectItems\DynamicLib\DynamicLib.vstemplate" />
     </Folder>
     <Folder name="StaticLib">
-     <File path="Templates\ProjectItems\StaticLib\lib.d" tool="None" />
+     <File tool="None" path="Templates\ProjectItems\StaticLib\lib.d" />
      <File path="Templates\ProjectItems\StaticLib\StaticLib.visualdproj" />
      <File path="Templates\ProjectItems\StaticLib\StaticLib.vstemplate" />
     </Folder>
     <Folder name="WindowsApp">
      <File path="Templates\ProjectItems\WindowsApp\WindowsApp.visualdproj" />
      <File path="Templates\ProjectItems\WindowsApp\WindowsApp.vstemplate" />
-     <File path="Templates\ProjectItems\WindowsApp\winmain.d" tool="None" />
+     <File tool="None" path="Templates\ProjectItems\WindowsApp\winmain.d" />
     </Folder>
    </Folder>
    <Folder name="Projects">
